--- a/assets/scss/common/_var.scss
+++ b/assets/scss/common/_var.scss
@@ -1,5 +1,12 @@
 $font-color: #272727;
 $contact-color: #FFFFFF;
 $contact-bg-color: #272727;
+$header-contact-hover-color: #FFF3B1;
+$button-hover-color: #FFFFFF;
+$card-bg-color: #FFFFFF;
 
 $contents-width: 1320px;
+
+$main-menu-bg-url-list: "../images/junenji_front.png", "../images/junenji_chant.png",
+						"../images/junenji_event.png", "../images/junenji_grave.png";
+$main-menu-animation-time: 0.3s;
