--- a/assets/scss/_main.scss
+++ b/assets/scss/_main.scss
@@ -11,11 +11,7 @@
 			height: 950px;		// 画像の高さ
 			text-align: center;
 
-			background-image: url("../images/junenji_top.png");
-			background-position: center;
-			background-size: cover;
-			background-repeat: no-repeat;
-
+			@include mixin.SetBackGroundImage("../images/junenji_top.png");
 			background-color: white;		// debug
 
 			&-title {
@@ -29,15 +25,8 @@
 		}
 	}
 
-	&-bg {
-		background-image: url("../images/bg.png");
-		background-repeat: repeat;
-	}
-
 	&-contents {
-		width: 100%;
-		max-width: var.$contents-width;
-		margin: 0 auto;
+		@include mixin.FixContentsCenter;
 	}
 
 	&-about {
@@ -47,6 +36,11 @@
 		padding-top: 200px;
 		padding-bottom : 200px;
 		text-align: center;
+
+		&-bg {
+			background-image: url("../images/bg.png");
+			background-repeat: repeat;
+		}
 
 		&-left {
 			margin-right: 125.5px;
@@ -80,10 +74,91 @@
 				margin-top: 56px;
 
 				font-size: 23px;
-				background: transparent;
+
+				&:hover {
+					background-color: var.$font-color;
+					color: var.$button-hover-color;
+				}
 			}
 		}
+	}
 
+	&-menu {
+		&-list {
+			
+		}
+
+		&-item {
+			@include mixin.FixContentsCenter;
+			height: 100%;
+			display: flex;
+			align-items: center;
+
+			&-card {
+				width: 300px;
+
+				padding-top: 132px;
+				padding-bottom: 40px;
+				background-color: var.$card-bg-color;
+				opacity: 0.9;
+				border: 1px solid var.$font-color;
+				border-radius: 3px;
+
+				font-weight: bold;
+
+				&-right {
+					margin-left: auto;
+					margin-right: 0;
+				}
+
+				&-left {
+					margin-left: 0;
+					margin-right: auto;
+				}
+
+				&-inner {
+					margin: 0 auto;
+					max-width: 200px;
+					width: 100%;
+				}
+
+				&-title {
+					font-size: 37px;
+					text-align: center;
+				}
+
+				&-text {
+					margin-top: 97px;
+					height: 90px;
+
+					font-size: 14px;
+					text-align: left;
+					@include mixin.LineHeight(14, 20);
+				}
+
+				&-button {
+					margin: 28px auto 0;
+					display: block;
+
+					&:hover {
+						background-color: var.$font-color;
+						color: var.$button-hover-color;
+					}
+				}
+			}
+
+			&-bg {
+				@for $i from 1 through length(var.$main-menu-bg-url-list) {
+					&:nth-child(#{$i}) {
+						@include mixin.SetBackGroundImage(#{nth(var.$main-menu-bg-url-list, $i)});
+					}
+				}
+
+				position: relative;
+				width: 100%;
+				height: 600px;
+			}
+		}
 	}
 	
 }
