--- a/assets/scss/common/_var.scss
+++ b/assets/scss/common/_var.scss
@@ -10,3 +10,4 @@ $contents-width: 1320px;
 $main-menu-bg-url-list: "../images/junenji_front.png", "../images/junenji_chant.png",
 						"../images/junenji_event.png", "../images/junenji_grave.png";
 $main-menu-animation-time: 0.3s;
+$main-menu-animation-scale: 1.05;
