--- a/assets/scss/_main.scss
+++ b/assets/scss/_main.scss
@@ -96,6 +96,7 @@
 
 			&-card {
 				width: 300px;
+				z-index: 2;
 
 				padding-top: 132px;
 				padding-bottom: 40px;
@@ -148,15 +149,34 @@
 			}
 
 			&-bg {
+				position: relative;
+				overflow: hidden;
+				width: 100%;
+				height: 600px;
+				z-index: 1;
+
 				@for $i from 1 through length(var.$main-menu-bg-url-list) {
-					&:nth-child(#{$i}) {
+					&:nth-child(#{$i})::after {
 						@include mixin.SetBackGroundImage(#{nth(var.$main-menu-bg-url-list, $i)});
 					}
 				}
 
-				position: relative;
-				width: 100%;
-				height: 600px;
+				&::after {
+					position: absolute;
+					content: "";
+					display: block;
+					width: 100%;
+					height: 100%;
+					top: 0;
+					transition: all var.$main-menu-animation-time ease-out;
+				}
+
+				&:hover {
+
+					&::after {
+						transform: scale(var.$main-menu-animation-scale);
+					}
+				}
 			}
 		}
 	}
