--- a/assets/scss/common/_var.scss
+++ b/assets/scss/common/_var.scss
@@ -4,6 +4,8 @@ $contact-bg-color: #272727;
 $header-contact-hover-color: #FFF3B1;
 $button-hover-color: #FFFFFF;
 $card-bg-color: #FFFFFF;
+$button-traffic-more-bg-color: #E6E6E6;
+$button-traffic-more-hover-bg-color: #707070;
 
 $contents-width: 1320px;
 
