--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -59,6 +59,11 @@
   padding: 14px 50px;
   background: transparent;
 }
+.button-normal3 {
+  border: none;
+  padding: 16px 50px;
+  background-color: #E6E6E6;
+}
 
 .loading {
   position: absolute;
@@ -143,16 +148,16 @@
   max-width: 1320px;
   margin: 0 auto;
 }
+.main-bg {
+  background-image: url("../images/bg.png");
+  background-repeat: repeat;
+}
 .main-about {
   display: flex;
   justify-content: center;
   padding-top: 200px;
   padding-bottom: 200px;
   text-align: center;
-}
-.main-about-bg {
-  background-image: url("../images/bg.png");
-  background-repeat: repeat;
 }
 .main-about-left {
   margin-right: 125.5px;
@@ -242,6 +247,7 @@
   width: 100%;
   height: 600px;
   z-index: 1;
+  /* アニメーション参考サイト：https://www.webopixel.net/html-css/1019.html */
 }
 .main-menu-item-bg:nth-child(1)::after {
   background-image: url(../images/junenji_front.png);
@@ -278,6 +284,43 @@
 }
 .main-menu-item-bg:hover::after {
   transform: scale(1.05);
+}
+.main-traffic {
+  padding-top: 200px;
+  padding-bottom: 200px;
+}
+.main-traffic-title {
+  text-align: center;
+  font-size: 35px;
+  font-weight: bold;
+  line-height: 0.7;
+  letter-spacing: 0.2em;
+}
+.main-traffic-map {
+  margin-top: 87px;
+  width: 100%;
+  max-width: 1320px;
+  height: 500px;
+}
+.main-traffic-text {
+  font-size: 20px;
+  text-align: center;
+}
+.main-traffic-address {
+  margin-top: 82px;
+}
+.main-traffic-tel {
+  margin-top: 24px;
+}
+.main-traffic-more {
+  display: block;
+  margin: 51px auto 0;
+  font-size: 20px;
+  font-weight: bold;
+}
+.main-traffic-more:hover {
+  background-color: #707070;
+  color: #FFFFFF;
 }
 
 html {
