--- a/assets/scss/object/_button.scss
+++ b/assets/scss/object/_button.scss
@@ -16,4 +16,10 @@
 		padding: 14px 50px;
 		background: transparent;
 	}
+
+	&-normal3 {
+		border: none;
+		padding: 16px 50px;
+		background-color: var.$button-traffic-more-bg-color;
+	}
 }
