--- a/assets/scss/common/_var.scss
+++ b/assets/scss/common/_var.scss
@@ -13,3 +13,6 @@ $main-menu-bg-url-list: "../images/junenji_front.png", "../images/junenji_chant.
 						"../images/junenji_event.png", "../images/junenji_grave.png";
 $main-menu-animation-time: 0.3s;
 $main-menu-animation-scale: 1.05;
+
+$main-slider-url-list: "../images/slider/junenji_hondonai.png", "../images/slider/junenji_hondokazari.png","../images/slider/junenji_nishimon3.png",
+						"../images/slider/junenji_kobodo4.png", "../images/slider/junenji_bell.png";
