--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -9,23 +9,25 @@ html {
 
 * {
 	box-sizing: border-box;
-	font-family: 'Source Han Serif', sans-serif;
 	letter-spacing: 0.05em;
 }
 
 body {
 	overflow-x: hidden;
 	color: var.$font-color;
+	font-family: 'Source Han Serif', sans-serif;
 
 	background-color: lightgreen;		// デバッグ
 }
 
 a {
 	text-decoration: none;
+	color: var.$font-color;
 }
 
 button {
 	cursor: pointer;
+	font-family: 'Source Han Serif', sans-serif;
 }
 
 .hidden {
