[add]タブレット版レスポンシブ対応開始、aboutまで作成完了

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,16 @@
 @charset "UTF-8";
+@media screen and (max-width: 960px) {
+  .tablet-hidden {
+    display: none;
+  }
+}
+
+@media screen and (max-width: 520px) {
+  .mobile-hidden {
+    display: none;
+  }
+}
+
 .header {
   width: 100%;
   background-image: url("../images/header-bg.png");
@@ -6,50 +18,269 @@
   background-size: cover;
   background-position: center;
 }
+@media screen and (max-width: 960px) {
+  .header {
+    height: 90px;
+  }
+}
+@media screen and (max-width: 960px) {
+  .header {
+    background-image: none;
+    background-color: #FFFFFF;
+  }
+}
 .header-inner {
+  position: relative;
+  width: 100%;
+  height: 100%;
   max-width: 1920px;
   margin: 0 auto;
   display: flex;
   justify-content: space-between;
 }
+.header-inner-left {
+  width: 15%;
+}
+@media screen and (max-width: 960px) {
+  .header-inner-left {
+    width: 40%;
+  }
+}
 .header-inner-left-logo-link {
   display: block;
   margin: 20px 13px;
+}
+@media screen and (max-width: 960px) {
+  .header-inner-left-logo-link {
+    margin: 1% 3%;
+  }
+}
+@media screen and (max-width: 960px) {
+  .header-inner-left-logo-link img {
+    width: 100%;
+    height: 90px;
+    -o-object-fit: contain;
+       object-fit: contain;
+  }
+}
+.header-inner-right {
+  width: 85%;
 }
 .header-inner-right-menu {
   height: 100%;
   display: flex;
   align-items: center;
+  justify-content: flex-end;
+  white-space: nowrap;
 }
 .header-inner-right-menu-normal {
-  margin-right: 74px;
+  margin-right: 14%;
 }
 .header-inner-right-menu-normal-list {
   display: flex;
 }
 .header-inner-right-menu-normal-item a {
-  font-size: 18px;
+  font-size: 1.8rem;
   color: #272727;
 }
+@media screen and (max-width: 1000px) {
+  .header-inner-right-menu-normal-item a {
+    font-size: 1.6rem;
+  }
+}
 .header-inner-right-menu-normal-item:not(:last-child) {
-  margin-right: 40px;
+  margin-right: 5%;
 }
 .header-inner-right-menu-contact {
   height: 100%;
-  font-size: 24px;
-  padding: 0 50px;
+  font-size: 2.4rem;
+  padding: 0 25px;
   color: #FFFFFF;
   background-color: #272727;
   border: none;
 }
+@media screen and (max-width: 1000px) {
+  .header-inner-right-menu-contact {
+    font-size: 2rem;
+  }
+}
 .header-inner-right-menu-contact:hover {
   color: #FFF3B1;
+}
+.header-inner-right-mb {
+  display: none;
+}
+@media screen and (max-width: 960px) {
+  .header-inner-right-mb {
+    width: 33%;
+    display: flex;
+    justify-content: flex-end;
+  }
+}
+@media screen and (max-width: 960px) {
+  .header-inner-right-mb-button {
+    width: 90px;
+    border: none;
+    cursor: pointer;
+    text-align: center;
+    display: flex;
+    flex-flow: column;
+    align-items: center;
+    justify-content: flex-end;
+    padding-bottom: 11px;
+    font-size: 1.1rem;
+  }
+}
+@media screen and (max-width: 960px) {
+  .header-inner-right-mb-button img {
+    margin-bottom: 8px;
+  }
+}
+@media screen and (max-width: 960px) {
+  .header-inner-right-mb-button span {
+    position: absolute;
+    left: 25%;
+    width: 50%;
+    height: 3px;
+    background-color: #272727;
+  }
+}
+@media screen and (max-width: 960px) {
+  .header-inner-right-mb-button span:nth-of-type(1) {
+    top: 26px;
+  }
+}
+@media screen and (max-width: 960px) {
+  .header-inner-right-mb-button span:nth-of-type(2) {
+    top: 38px;
+  }
+}
+@media screen and (max-width: 960px) {
+  .header-inner-right-mb-button span:nth-of-type(3) {
+    top: 50px;
+  }
+}
+.header-inner-right-mb-menu-list {
+  display: none;
+}
+@media screen and (max-width: 960px) {
+  .header-inner-right-mb-menu-list {
+    display: block;
+    width: 80%;
+    height: 120vh;
+    margin: 100px auto 0;
+    text-align: center;
+    position: relative;
+    z-index: 3;
+  }
+}
+.header-inner-right-mb-menu-list-outer {
+  display: none;
+}
+@media screen and (max-width: 960px) {
+  .header-inner-right-mb-menu-list-outer {
+    width: 100%;
+    height: 120vh;
+    z-index: 3;
+    position: fixed;
+    top: 0;
+    left: 0;
+    overflow-y: scroll;
+  }
+}
+@media screen and (max-width: 960px) {
+  .header-inner-right-mb-menu-list-overlay {
+    background-color: rgba(52, 52, 52, 0.8);
+    position: fixed;
+    width: 100vw;
+    height: 120vh;
+    top: 0;
+    left: 0;
+    z-index: 2;
+    display: none;
+  }
+}
+.header-inner-right-mb-menu-list-close-button {
+  display: flex;
+  flex-flow: column;
+  justify-content: flex-end;
+  width: 75px;
+  height: 11vh;
+  margin-left: auto;
+  margin-right: 50px;
+  margin-top: 6vh;
+  color: #FFFFFF;
+  font-size: 2.1rem;
+  cursor: pointer;
+}
+.header-inner-right-mb-menu-list-close-button-icon {
+  position: relative;
+}
+@media screen and (max-width: 960px) {
+  .header-inner-right-mb-menu-list-close-button-icon span {
+    position: absolute;
+    width: 85%;
+    height: 7px;
+    background-color: #FFFFFF;
+    border-radius: 2px;
+  }
+}
+@media screen and (max-width: 960px) {
+  .header-inner-right-mb-menu-list-close-button-icon span:nth-of-type(1) {
+    top: -25px;
+  }
+}
+@media screen and (max-width: 960px) {
+  .header-inner-right-mb-menu-list-close-button-icon span:nth-of-type(2) {
+    top: -45px;
+  }
+}
+@media screen and (max-width: 960px) {
+  .header-inner-right-mb-menu-list-close-button-icon span:nth-of-type(3) {
+    top: -65px;
+  }
+}
+.header-inner-right-mb-menu-list-logo {
+  display: none;
+}
+@media screen and (max-width: 960px) {
+  .header-inner-right-mb-menu-list-logo {
+    display: block;
+    margin: 39px auto 0;
+  }
+}
+@media screen and (max-width: 960px) {
+  .header-inner-right-mb-menu-item {
+    padding-bottom: 54px;
+  }
+}
+.header-inner-right-mb-menu-item a {
+  display: none;
+}
+@media screen and (max-width: 960px) {
+  .header-inner-right-mb-menu-item a {
+    display: block;
+    color: #FFFFFF;
+    width: 100%;
+    font-size: 2.8rem;
+    font-weight: bold;
+  }
+}
+@media screen and (max-width: 960px) {
+  .header-inner-right-mb-menu-item a:last-of-type {
+    padding-bottom: 0;
+  }
 }
 
 .button-normal {
   border: 1px solid #272727;
   padding: 9px 30px;
   background: transparent;
+}
+@media screen and (max-width: 960px) {
+  .button-normal {
+    padding: 23px 70px;
+  }
 }
 .button-normal-radius {
   border-radius: 3px;
@@ -62,6 +293,16 @@
 .button-normal3 {
   border: none;
   padding: 16px 50px;
+  background-color: #E6E6E6;
+}
+.button-header-tel {
+  background-color: #E6E6E6;
+}
+.button-header-access {
+  background-color: #B2B2B2;
+}
+.button-header-hamburger {
+  position: relative;
   background-color: #E6E6E6;
 }
 
@@ -125,6 +366,7 @@
 }
 .main-visual-inner {
   position: relative;
+  width: 100%;
   height: 950px;
   text-align: center;
   pointer-events: none;
@@ -133,12 +375,18 @@
   background-size: cover;
   background-repeat: no-repeat;
 }
+@media screen and (max-width: 960px) {
+  .main-visual-inner {
+    height: 930px;
+  }
+}
 .main-visual-inner-title {
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
   z-index: 2;
+  width: 30%;
 }
 .main-visual-inner-title-img {
   height: 100%;
@@ -159,32 +407,89 @@
   padding-bottom: 200px;
   text-align: center;
 }
+@media screen and (max-width: 960px) {
+  .main-about {
+    display: none;
+  }
+}
+.main-about-tablet {
+  display: none;
+}
+@media screen and (max-width: 960px) {
+  .main-about-tablet {
+    display: block;
+    justify-content: center;
+    padding-top: 72px;
+    padding-bottom: 100px;
+    text-align: center;
+  }
+}
+.main-about-tablet-img {
+  display: flex;
+  justify-content: center;
+}
 .main-about-left {
   margin-right: 125.5px;
   -o-object-fit: contain;
      object-fit: contain;
+}
+@media screen and (max-width: 960px) {
+  .main-about-left {
+    margin-right: 3%;
+    width: 60px;
+  }
 }
 .main-about-right {
   margin-left: 125.5px;
   -o-object-fit: contain;
      object-fit: contain;
 }
+@media screen and (max-width: 960px) {
+  .main-about-right {
+    margin-left: 0;
+    width: 60px;
+  }
+}
 .main-about-contents-title {
-  font-size: 45px;
+  font-size: 4.5rem;
   font-weight: bold;
   line-height: 1.4222222222;
 }
+@media screen and (max-width: 960px) {
+  .main-about-contents-title {
+    margin-top: 20px;
+    font-size: 4rem;
+    line-height: 1.75;
+  }
+}
 .main-about-contents-title-small {
-  font-size: 37px;
+  font-size: 3.7rem;
+}
+@media screen and (max-width: 960px) {
+  .main-about-contents-title-small {
+    font-size: 3.5rem;
+  }
 }
 .main-about-contents-text {
   margin-top: 45px;
-  font-size: 18px;
+  font-size: 1.8rem;
   line-height: 1.6666666667;
+}
+@media screen and (max-width: 960px) {
+  .main-about-contents-text {
+    font-size: 2.4rem;
+    line-height: 1.6666666667;
+  }
 }
 .main-about-contents-button {
   margin-top: 56px;
-  font-size: 23px;
+  font-size: 2.3rem;
+}
+@media screen and (max-width: 960px) {
+  .main-about-contents-button {
+    font-size: 3.8rem;
+    font-weight: bold;
+  }
 }
 .main-about-contents-button:hover {
   background-color: #272727;
@@ -223,13 +528,13 @@
   width: 100%;
 }
 .main-menu-item-card-title {
-  font-size: 37px;
+  font-size: 3.7rem;
   text-align: center;
 }
 .main-menu-item-card-text {
   margin-top: 97px;
   height: 90px;
-  font-size: 14px;
+  font-size: 1.4rem;
   text-align: left;
   line-height: 1.4285714286;
 }
@@ -291,7 +596,7 @@
 }
 .main-traffic-title {
   text-align: center;
-  font-size: 35px;
+  font-size: 3.5rem;
   font-weight: bold;
   line-height: 0.7;
   letter-spacing: 0.2em;
@@ -303,7 +608,7 @@
   height: 500px;
 }
 .main-traffic-text {
-  font-size: 20px;
+  font-size: 2rem;
   text-align: center;
 }
 .main-traffic-address {
@@ -315,7 +620,7 @@
 .main-traffic-more {
   display: block;
   margin: 51px auto 0;
-  font-size: 20px;
+  font-size: 2rem;
   font-weight: bold;
 }
 .main-traffic-more:hover {
@@ -381,11 +686,11 @@
   font-weight: bold;
 }
 .footer-inner-address-text {
-  font-size: 23px;
+  font-size: 2.3rem;
 }
 .footer-inner-address-tel-text {
   margin-top: 12px;
-  font-size: 30px;
+  font-size: 3rem;
 }
 .footer-inner-menu {
   margin-top: 94px;
@@ -397,7 +702,12 @@
   padding-bottom: 14px;
 }
 .footer-inner-menu-item {
-  font-size: 21px;
+  font-size: 2.1rem;
+}
+@media screen and (max-width: 1000px) {
+  .footer-inner-menu-item {
+    font-size: 1.8rem;
+  }
 }
 .footer-inner-sns {
   margin: 33px auto 0;
@@ -417,13 +727,13 @@
 .footer-inner-copyright-text {
   display: block;
   text-align: center;
-  font-size: 16px;
+  font-size: 1.6rem;
   font-family: "Zen Old Mincho", serif;
   font-weight: 900;
 }
 
 html {
-  font-size: 100%;
+  font-size: 10px;
 }
 
 * {
@@ -446,6 +756,11 @@ a {
 button {
   cursor: pointer;
   font-family: "Source Han Serif", sans-serif;
+}
+
+img {
+  max-width: 100%;
+  image-rendering: -webkit-optimize-contrast;
 }
 
 .hidden {
