--- a/assets/scss/common/_var.scss
+++ b/assets/scss/common/_var.scss
@@ -1,11 +1,19 @@
+$base-font-size: 10px;
+
 $font-color: #272727;
 $contact-color: #FFFFFF;
 $contact-bg-color: #272727;
 $header-contact-hover-color: #FFF3B1;
+$header-modal-bg-color: #343434;
+$header-tablet-bg-color: #FFFFFF;
 $button-hover-color: #FFFFFF;
 $card-bg-color: #FFFFFF;
 $button-traffic-more-bg-color: #E6E6E6;
 $button-traffic-more-hover-bg-color: #707070;
+$button-header-tel-bg-color: #E6E6E6;
+$button-header-access-bg-color: #B2B2B2;
+$button-header-hamburger-bg-color: #E6E6E6;
+$button-header-hamburger-color: #272727;
 
 $contents-width: 1320px;
 
