--- a/assets/scss/_header.scss
+++ b/assets/scss/_header.scss
@@ -1,4 +1,6 @@
 @use "common/var";
+@use "common/mixin";
+@use "common/responsive" as *;
 
 @mixin header-center {
 	max-width: 1920px;
@@ -8,33 +10,69 @@
 .header {
 	width: 100%;
 
+	@include tablet {
+		height: 90px;
+	}
+
 	background-image: url("../images/header-bg.png");
 	background-repeat: repeat;
 	background-size: cover;
 	background-position: center;
 
+	@include tablet {
+		background-image: none;
+		background-color: var.$header-tablet-bg-color;
+	}
+
 	&-inner {
+		position: relative;
+		width: 100%;
+		height: 100%;
 		@include header-center;
 		display: flex;
 		justify-content: space-between;
 
 		&-left {
+			width: 15%;
+
+			@include tablet {
+				width: 40%;
+			}
+
 			&-logo {
 				&-link {
 					display: block;
 					margin: 20px 13px;
+
+					@include tablet {
+						margin: 1% 3%;//margin: 7px 25px;
+					}
+
+					img {
+						@include tablet {
+							width: 100%;
+							height: 90px;
+							object-fit: contain;
+	
+						}
+					}
 				}
 			}
 		}
 
 		&-right {
+			width: 85%;
+
+			// PCナビメニュー
 			&-menu {
 				height: 100%;
 				display: flex;
 				align-items: center;
+				justify-content: flex-end;
+				white-space: nowrap;
 
 				&-normal {
-					margin-right: 74px;
+					margin-right: 14%;		//74px;
 
 					&-list {
 						display : flex;
@@ -42,26 +80,227 @@
 
 					&-item {
 						a {
-							font-size: 18px;
+							@include mixin.FontSize(18px);
 							color: var.$font-color;
+
+							@include otherResponsive(1000px) {
+								@include mixin.FontSize(16px);
+							}
 						}
 
 						&:not(:last-child) {
-							margin-right: 40px;
+							margin-right: 5%;		// 40px
 						}
 					}
 				}
 
 				&-contact {
 					height: 100%;
-					font-size: 24px;
-					padding: 0 50px;
+					@include mixin.FontSize(24px);
+					padding: 0 25px;		// 0 50px
 					color: var.$contact-color;
 					background-color: var.$contact-bg-color;
 					border: none;
 
+					@include otherResponsive(1000px) {
+						@include mixin.FontSize(20px);
+					}
+
 					&:hover {
 						color: var.$header-contact-hover-color;
+					}
+				}
+			}
+
+			&-mb {
+				display: none;
+
+				@include tablet {
+					width: 33%;
+					display: flex;
+					justify-content: flex-end;
+				}
+
+				&-button {
+					@include tablet {
+						width: 90px;
+						border: none;
+						//z-index: 4;
+						cursor: pointer;
+						text-align: center;
+						
+						display: flex;
+						flex-flow: column;
+						align-items: center;
+						justify-content: flex-end;
+						padding-bottom: 11px;
+						@include mixin.FontSize(11px);	
+					}
+
+					img {
+						@include tablet {
+							margin-bottom: 8px;
+						}
+					}
+
+					span {
+						@include tablet {
+							position: absolute;
+							left: 25%;		// (100%-下のwidth)/2の値
+							width: 50%;
+							height: 3px;		// ハンバーガーの線の高さ
+							background-color: var.$button-header-hamburger-color;	
+						}
+
+						
+						&:nth-of-type(1) {
+							@include tablet {
+								top: 26px;
+							}
+						}
+						&:nth-of-type(2) {
+							@include tablet {
+								top: 38px;
+							}
+						}
+						&:nth-of-type(3) {
+							@include tablet {
+								top: 50px;
+							}
+						}
+					}
+				}
+
+				&-menu {
+					&-list {
+						display: none;
+
+						// タブレットナビメニュー
+						@include tablet {
+							display: block;
+							width: 80%;
+							height: 120vh;
+							margin: 100px auto 0;
+							text-align: center;
+
+							position: relative;
+							z-index: 3;
+						}
+
+						&-outer {
+							display: none;
+
+							@include tablet {
+								width: 100%;
+								height: 120vh;
+								//opacity: 0;
+								//display: none;
+								z-index: 3;
+								position: fixed;
+								top: 0;
+								left: 0;
+
+								overflow-y: scroll;
+							}
+						}
+
+						&-overlay {
+							@include tablet {
+								background-color: rgba(52,52,52,0.8);		// HexColor:#343434をrgbに変換
+								//transition: opacity 0.6s ease, visibility 0.6s ease;	
+								position: fixed;
+								width: 100vw;
+								height: 120vh;
+								top: 0;
+								left: 0;
+								z-index: 2;
+								display: none;
+							}
+						}
+
+						&-close {
+							&-button {
+								display: flex;
+								flex-flow: column;
+								//align-items: center;
+								justify-content: flex-end;
+
+								width: 75px;		//15%;
+								height: 11vh;
+								margin-left: auto;
+								margin-right: 50px;
+								margin-top: 6vh;
+
+								color: var.$contact-color;
+								@include mixin.FontSize(21px);
+
+								cursor: pointer;
+
+								&-icon {
+									position: relative;
+									span {
+										@include tablet {
+											position: absolute;
+											//left: 25%;		// (100%-下のwidth)/2の値
+											width: 85%;
+											height: 7px;		// ハンバーガーの線の高さ
+											background-color: var.$contact-color;
+											border-radius: 2px;
+										}
+										
+										&:nth-of-type(1) {
+											@include tablet {
+												top: -25px;
+											}
+										}
+										&:nth-of-type(2) {
+											@include tablet {
+												top: -45px;
+											}
+										}
+										&:nth-of-type(3) {
+											@include tablet {
+												top: -65px;
+											}
+										}
+									}
+								}
+							}
+						}
+
+						&-logo {
+							display: none;
+
+							@include tablet {
+								display: block;
+								margin: 39px auto 0;
+							}
+						}
+					}
+
+					&-item {
+						@include tablet {
+							padding-bottom: 54px;
+						}
+
+						a {
+							display: none;
+
+							@include tablet {
+								display: block;
+								color: var.$contact-color;
+								width: 100%;
+								@include mixin.FontSize(28px);
+								font-weight: bold;
+							}
+	
+							&:last-of-type {
+								@include tablet {
+									padding-bottom: 0;
+								}
+							}
+	
+						}
 					}
 				}
 			}
