--- a/assets/scss/object/_button.scss
+++ b/assets/scss/object/_button.scss
@@ -1,10 +1,15 @@
 @use "../common/var";
+@use "../common/responsive" as *;
 
 .button {
 	&-normal {
 		border: 1px solid var.$font-color;
 		padding: 9px 30px;
 		background: transparent;
+
+		@include tablet {
+			padding: 23px 70px;
+		}
 
 		&-radius {
 			border-radius: 3px;
@@ -22,4 +27,21 @@
 		padding: 16px 50px;
 		background-color: var.$button-traffic-more-bg-color;
 	}
+
+	&-header {
+		&-tel {
+			background-color: var.$button-header-tel-bg-color;
+		}
+
+		&-access {
+			background-color: var.$button-header-access-bg-color;
+		}
+
+		&-hamburger {
+			position: relative;
+			background-color: var.$button-header-hamburger-bg-color;
+		}
+
+	}
+
 }
